deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: default
  labels:
    app: pihole
spec:
  selector:
    matchLabels:
      app: pihole
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 80 #Admin interface
            - containerPort: 53 #DNS
          resources:
            limits:
              cpu: 200m
              memory: 500Mi
          volumeMounts:
            - name: etc-dnsmasq
              mountPath: /etc/dnsmasq.d/
            - name: etc-pihole
              mountPath: /etc/pihole/
      volumes:
        - name: etc-pihole
          emptyDir: {}
        - name: etc-dnsmasq
          emptyDir: {}
      restartPolicy: Always
      dnsConfig:
        nameservers:
          - 1.1.1.1
