pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pihole
  namespace: default
  labels:
    app: "pihole"
spec:
  containers:
    - name: pihole
      image: pihole/pihole:latest
      ports:
        - containerPort: 80 #Admin interface
        - containerPort: 53 #DNS
      restartPolicy: UnlessStopped
      resources:
        limits:
          cpu: 200m
          memory: 500Mi
      volumeMounts:
        - name: dnsmasq
          mountPath: /etc/dnsmasq.d/
  # These containers are run during pod initialization
  dnsPolicy: Default
  volumes:
    - name: etc-pihole
      emptyDir: {}
    - name: etc-dnsmasq
      emptyDir: {}
