jackett.yml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: default
spec:
  selector:
    app: jackett
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 9117
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: default
  labels:
    app: jackett
spec:
  selector:
    matchLabels:
      app: jackett
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett
          ports:
            - containerPort: 9117 # interface
          volumeMounts:
            - name: downloads
              mountPath: /config/
              subPath: config/jackett
            - name: downloads
              mountPath: /downloads/
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
      dnsConfig:
        nameservers:
          - 1.1.1.1
