plex.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
spec:
  selector:
    app: plex
  type: ClusterIP
  clusterIP: 10.96.0.4
  ports:
    - name: http
      port: 80
      targetPort: 32400
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: default
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      app: plex
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: linuxserver/plex
          # use resources otherwise logs will eat your ephemeral-storage
          # resulting in root `/` at 100% on nodes and pods becoming
          # `evicted`
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
              ephemeral-storage: "2Gi"
            limits:
              memory: "16Gi"
              cpu: "2"
              ephemeral-storage: "4Gi"
          ports:
            - containerPort: 32400
              name: pms
          volumeMounts:
            - name: downloads
              mountPath: /movies
              subPath: movies
            - name: downloads
              mountPath: /config/
              subPath: config/plex
            - name: downloads
              mountPath: /tv
              subPath: tv
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
