radarr.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
spec:
  selector:
    app: radarr
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 7878
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: default
  labels:
    app: radarr
spec:
  selector:
    matchLabels:
      app: radarr
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr
          ports:
            - containerPort: 7878 # interface
          volumeMounts:
            - name: nfs
              mountPath: /config/
              subPath: config/radarr
            - name: nfs
              mountPath: /movies/
              subPath: movies
            - name: nfs
              mountPath: /downloads/
      volumes:
        - name: nfs
          nfs:
            server: 192.168.1.9
            path: /
      restartPolicy: Always
      dnsConfig:
        nameservers:
          - 1.1.1.1
