rutorrent.yml
apiVersion: v1
kind: Service
metadata:
  name: rutorrent
  namespace: default
spec:
  selector:
    app: rutorrent
  type: ClusterIP
  clusterIP: 10.96.0.3
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: scgi
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: torrent-tcp
      port: 51413
      targetPort: 51413
      protocol: TCP
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rutorrent
  namespace: default
  labels:
    app: rutorrent
spec:
  selector:
    matchLabels:
      app: rutorrent
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rutorrent
    spec:
      containers:
        - name: rutorrent
          image: ghcr.io/linuxserver/rutorrent
          ports:
            - containerPort: 80 # interface
            - containerPort: 5000 # scgi
            - containerPort: 51413
            - containerPort: 6881
          volumeMounts:
            - name: config
              mountPath: /config/
            - name: dl
              mountPath: /downloads/
      volumes:
        - name: config
          nfs:
            server: 192.168.1.9
            path: /config/
        - name: dl
          nfs:
            server: 192.168.1.9
            path: /
      restartPolicy: Always
      dnsConfig:
        nameservers:
          - 1.1.1.1
