service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: default
spec:
  selector:
    app: pihole
  type: ClusterIP
  clusterIP: 10.96.0.2
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dns
      port: 53
      targetPort: 53
      protocol: UDP
