sonarr.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
spec:
  selector:
    app: sonarr
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8989
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: default
  labels:
    app: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr
          ports:
            - containerPort: 7878 # interface
          volumeMounts:
            - name: downloads
              mountPath: /config/
              subPath: config/sonarr
            - name: downloads
              mountPath: /downloads/
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
      dnsConfig:
        nameservers:
          - 1.1.1.1
